[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scene/Click/SpengHead.tscn" type="PackedScene" id=1]
[ext_resource path="res://Image/home.png" type="Texture" id=2]
[ext_resource path="res://Scene/Click/ClickMix.gd" type="Script" id=3]
[ext_resource path="res://Scene/Click/IchuenHead.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Click/OlayHead.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/Click/MnoHead.tscn" type="PackedScene" id=6]
[ext_resource path="res://Image/musical_consert.png" type="Texture" id=8]
[ext_resource path="res://Image/bg2.jpg" type="Texture" id=9]
[ext_resource path="res://Font/SanamDeklen_chaya.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 55
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 10 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false

[node name="musical_consert" type="Sprite" parent="Bg"]
modulate = Color( 1, 1, 1, 0.509804 )
position = Vector2( 512.007, 936.945 )
texture = ExtResource( 8 )

[node name="Tek_abc3dz_mno" parent="." instance=ExtResource( 6 )]
position = Vector2( 58.0135, 198.041 )

[node name="Tek_abc3dz_olay" parent="." instance=ExtResource( 5 )]
position = Vector2( 58.0083, 307.237 )

[node name="Tek_abc3dz_ichuen" parent="." instance=ExtResource( 4 )]
position = Vector2( 171.001, 237.711 )

[node name="Tek_abc3dz_speng" parent="." instance=ExtResource( 1 )]
position = Vector2( 167.019, 353.792 )

[node name="TotalScores" type="Label" parent="."]
margin_left = 381.218
margin_top = 1300.16
margin_right = 631.218
margin_bottom = 1347.16
custom_colors/font_color = Color( 0.921875, 0.129639, 0.129639, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Total : 0"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 15.1708
margin_top = 810.359
margin_right = 205.171
margin_bottom = 1010.36

[node name="ClickMno" type="Label" parent="VBoxContainer"]
margin_right = 214.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.878431, 0.537255, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Mno : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickOlay" type="Label" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 214.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0.419608, 0.498039, 0.988235, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Olay : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickSpeng" type="Label" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 214.0
margin_bottom = 290.0
custom_colors/font_color = Color( 0.92549, 0.972549, 0.113725, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Sprng : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickIchuen" type="Label" parent="VBoxContainer"]
margin_top = 294.0
margin_right = 214.0
margin_bottom = 388.0
custom_colors/font_color = Color( 0.772549, 0, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Icuen : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeBT" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 490.0
margin_top = 1850.0
margin_right = 630.0
margin_bottom = 1984.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 2 )
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="HomeBT" to="." method="_on_HomeBT_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
